signature adjustment
